--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="" class="menu-item">Contact Us</a>
         </div>
         <div class="ctas">
-          <a href="">Sign Up</a>
+          <a href="" class="sign-up">Sign Up</a>
         </div>
       </div>
     </nav>
@@ -46,6 +46,70 @@
         <div class="hero-ctas">
           <a href="" class="cta-primary">Explore Remote Jobs</a>
           <a href="" class="cta-secondary">How it works?</a>
+        </div>
+      </div>
+      <!-- Card -->
+      <div class="jobs">
+        <h2 class="jobs-headline">Featured Jobs</h2>
+        <div class="jobs-list">
+          <div class="job">
+            <div class="job-header">
+              <img src="assets/figma-logo.png" class="job-logo" alt="" />
+              <div class="job-meta">
+                <h3 class="job-title">Front-End Developer</h3>
+                <p class="job-company">Figma</p>
+              </div>
+            </div>
+            <p class="job-description">
+              We are looking for an experienced front-end developer to join our
+              team.
+            </p>
+            <hr class="job-devider" />
+            <footer class="job-footer">
+              <div class="job-tags">
+                <span class="job-tag">Rust</span>
+              </div>
+              <div class="job-salary">$70,000 - $90,000</div>
+            </footer>
+          </div>
+          <div class="job">
+            <div class="job-header">
+              <img src="assets/facebook-logo.png" class="job-logo" alt="" />
+              <div class="job-meta">
+                <h3 class="job-title">Data Scientist</h3>
+                <p class="job-company">Facebook</p>
+              </div>
+            </div>
+            <p class="job-description">
+              We are seeking a data scientist to join our team.
+            </p>
+            <hr class="job-devider" />
+            <footer class="job-footer">
+              <div class="job-tags">
+                <span class="job-tag">Python</span>
+              </div>
+              <div class="job-salary">$100,000 - $130,000</div>
+            </footer>
+          </div>
+          <div class="job">
+            <div class="job-header">
+              <img src="assets/vercel-logo.png" class="job-logo" alt="" />
+              <div class="job-meta">
+                <h3 class="job-title">Technical Writer</h3>
+                <p class="job-company">Vercel</p>
+              </div>
+            </div>
+            <p class="job-description">
+              We are seeking a technical writer to join our team.
+            </p>
+            <hr class="job-devider" />
+            <footer class="job-footer">
+              <div class="job-tags">
+                <span class="job-tag">Documentation</span>
+              </div>
+              <div class="job-salary">$60,000 - $80,000</div>
+            </footer>
+          </div>
         </div>
       </div>
     </div>
